fix(splash): Adjust padding for logo readability on larger screens

--- a/src/app/splash/splash.component.css
+++ b/src/app/splash/splash.component.css
@@ -57,4 +57,8 @@
         padding: 2.5%;
         font-size: 1.25em;
     }
+
+    #splash {
+        padding: 3.5% 0 20.5%;
+    }
 }
